[package]
name = "pcx"
version = "0.2.0"
authors = ["kryptan"]
description = "Library for reading & writing PCX images."
documentation = "https://docs.rs/pcx/"
homepage = "https://github.com/kryptan/pcx"
repository = "https://github.com/kryptan/pcx"
readme = "README.md"
keywords = ["pcx", "image", "paintbrush"]
license = "WTFPL"
exclude = ["pcx.iml", "test-data"]

[dependencies]
byteorder = "0.5"

[dev-dependencies]
walkdir = "1.0.3"
image = { version = "0.10.4", features = ["png_codec"], default-features = false }
