[package]
name = "pcx"
version = "0.2.4"
authors = ["kryptan"]
description = "Library for reading & writing PCX images."
documentation = "https://docs.rs/pcx/"
homepage = "https://github.com/kryptan/pcx"
repository = "https://github.com/kryptan/pcx"
readme = "README.md"
keywords = ["pcx", "image", "paintbrush"]
license = "MIT OR Apache-2.0 OR WTFPL"
exclude = ["/test-data", "/fuzz"]
edition = "2021"

[dependencies]
byteorder = "1.2.6"

[dev-dependencies]
walkdir = "2.2.5"
image = { version = "0.25.5", features = ["png"], default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
